--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -115,30 +115,35 @@
 
             <EditText
                 android:id="@+id/telefono"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="349dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_telefono"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
+                android:hint="Telefono"
+                android:inputType="textPersonName|textEmailAddress"
+                android:textColorHighlight="#FFC107"
+                android:textColorLink="#FBCD23"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/acerca_de"
                 tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <EditText
                 android:id="@+id/fechaNac"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="349dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_fecha_de_nacimiento"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
+                android:hint="Fecha de Nacimiento"
+                android:inputType="textPersonName|textEmailAddress"
+                android:textColorHighlight="#FFC107"
+                android:textColorLink="#FBCD23"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
@@ -147,14 +152,17 @@
 
             <EditText
                 android:id="@+id/estatura"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="349dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_estatura"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
+                android:hint="Estatura"
+                android:inputType="textPersonName|textEmailAddress"
+                android:textColorHighlight="#FFC107"
+                android:textColorLink="#FBCD23"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
@@ -163,14 +171,17 @@
 
             <EditText
                 android:id="@+id/peso"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="349dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="24dp"
                 android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_peso"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
+                android:hint="Peso"
+                android:inputType="textPersonName|textEmailAddress"
+                android:textColorHighlight="#FFC107"
+                android:textColorLink="#FBCD23"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
