carrito con uid

--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -76,7 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="786dp"
         android:layout_marginBottom="200dp"
-        android:background="@color/white"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/authLayout"
             android:layout_width="0dp"
-            android:layout_height="650dp"
+            android:layout_height="625dp"
             android:layout_marginBottom="30dp"
             android:background="@color/white"
             android:orientation="vertical"
@@ -116,9 +116,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@color/colorPrimary"
+                android:fontFamily="sans-serif-black"
                 android:gravity="center"
                 android:text="Carrito"
-                android:fontFamily="sans-serif-black"
                 android:textColor="@color/black"
                 android:textSize="34sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -188,12 +188,12 @@
                 android:id="@+id/carrito_recy"
                 android:layout_width="0dp"
                 android:layout_height="297dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="5dp"
                 android:scrollbars="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider" />
+                app:layout_constraintTop_toBottomOf="@+id/carrito_informacionTitulo" />
 
             <Button
                 android:id="@+id/button"
@@ -243,24 +243,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
-            android:id="@+id/fondo_circulo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="-50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/fondo_mediocirculo" />
-
-        <ImageView
             android:id="@+id/imageView2"
             android:layout_width="48dp"
             android:layout_height="33dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="280dp"
-            android:layout_marginBottom="96dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/authLayout"
             app:srcCompat="@drawable/correo_icon" />
 
         <TextView
@@ -268,7 +257,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="19dp"
             android:text="Correo: Testfarma@gmail.com"
             android:textColor="#2B2828"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -278,7 +267,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="60dp"
             android:text="Telefono: 66213871"
             android:textColor="#2B2828"
