--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -54,9 +54,8 @@
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="42dp"
-            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="2dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/logo"
             android:contentDescription="@string/logo"
@@ -72,20 +71,72 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sep_amarillo"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:background="#fbcd23"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_nav_bar">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/id_d_usuario"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:background="#c4c4c4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sep_amarillo">
+
+        <TextView
+            android:id="@+id/Id_usuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/id_usr"
+            android:textAlignment="center"
+            android:textColor="#272625"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.193"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/userID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:text="1123456789"
+            android:textColor="#272625"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/Id_usuario"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/authLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/white"
+        android:background="#FFFFFF"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_nav_bar"
-        app:layout_constraintVertical_bias="0.48000002">
+        app:layout_constraintTop_toBottomOf="@+id/id_d_usuario"
+        app:layout_constraintVertical_bias="0.49">
 
         <ScrollView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="394dp"
+            android:layout_height="792dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,52 +147,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/sep_amarillo"
-                    android:layout_width="match_parent"
-                    android:layout_height="43dp"
-                    android:background="#fbcd23">
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/id_d_usuario"
-                    android:layout_width="match_parent"
-                    android:layout_height="46dp"
-                    android:background="#c4c4c4"
-                    tools:layout_editor_absoluteY="43dp">
-
-                    <TextView
-                        android:id="@+id/Id_usuario"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/id_usr"
-                        android:textAlignment="center"
-                        android:textColor="#272625"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.193"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="28dp"
-                        android:text="1123456789"
-                        android:textColor="#272625"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/Id_usuario"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/results_user"
@@ -158,14 +163,18 @@
                     android:id="@+id/resultadosFL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#c4c4c4">
+                    android:background="#FFFFFF"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_view_res"
                         android:layout_width="match_parent"
                         android:layout_height="262dp"
-                        android:scrollbars="horizontal|vertical"
+                        android:background="#c4c4c4"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
 
+                        android:scrollbars="horizontal|vertical"
                         app:layoutManager="LinearLayoutManager"
                         tools:listitem="@layout/resultado_layout" />
                 </FrameLayout>
@@ -185,12 +194,16 @@
                     android:id="@+id/historial_FL"
                     android:layout_width="match_parent"
                     android:layout_height="318dp"
-                    android:background="#c4c4c4">
+                    android:background="#FFFFFF"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="15dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_View_Hist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="#c4c4c4"
                         app:layoutManager="LinearLayoutManager"
                         tools:listitem="@layout/resultado_layout">
 
@@ -198,16 +211,20 @@
 
                 </FrameLayout>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/sep_amarillo2"
-                    android:layout_width="match_parent"
-                    android:layout_height="17dp"
-                    android:background="#fbcd23">
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
             </LinearLayout>
         </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sep_amarillo2"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="#fbcd23"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/authLayout">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
