--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -74,9 +74,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bloque_amarillo"
         android:layout_width="0dp"
-        android:layout_height="786dp"
-        android:layout_marginBottom="200dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="754dp"
+        android:background="@color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,8 +87,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/authLayout"
             android:layout_width="0dp"
-            android:layout_height="625dp"
-            android:layout_marginBottom="30dp"
+            android:layout_height="753dp"
             android:background="@color/white"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -99,16 +97,67 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0">
 
+            <RelativeLayout
+                android:id="@+id/frameLayout2"
+                android:layout_width="0dp"
+                android:layout_height="102dp"
+                android:background="@color/colorPrimary"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="43dp"
+                    android:layout_height="34dp"
+                    android:layout_below="@+id/imageView2"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="5dp"
+
+                    app:srcCompat="@drawable/telefono_icon" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="48dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="80dp"
+                    android:layout_marginTop="15dp"
+
+                    app:srcCompat="@drawable/correo_icon" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="130dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Correo: Testfarma@gmail.com"
+                    android:textColor="#2B2828" />
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textView8"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="130dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Telefono: 66213871"
+                    android:textColor="#2B2828" />
+            </RelativeLayout>
+
             <Button
                 android:id="@+id/back"
                 android:layout_width="144dp"
                 android:layout_height="66dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="32dp"
-                android:layout_marginBottom="86dp"
                 android:text="Continua viendo"
                 android:textColor="#455A64"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/carrito_recy" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -199,13 +248,13 @@
                 android:id="@+id/button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginBottom="96dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="25dp"
                 android:backgroundTint="#8F8E8E"
                 android:text="Generar factura"
                 android:textColor="#212121"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/carrito_recy" />
 
             <TextView
                 android:id="@+id/texto_sub"
@@ -241,50 +290,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="48dp"
-            android:layout_height="33dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="280dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/authLayout"
-            app:srcCompat="@drawable/correo_icon" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="19dp"
-            android:text="Correo: Testfarma@gmail.com"
-            android:textColor="#2B2828"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/authLayout" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="60dp"
-            android:text="Telefono: 66213871"
-            android:textColor="#2B2828"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/authLayout" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="43dp"
-            android:layout_height="34dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="284dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/authLayout"
-            app:srcCompat="@drawable/telefono_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
